[tool.poetry]
name = "hijiki"
version = "2.0.0"
description = "Biblioteca para comunicação com RabbitMQ"
authors = ["Seu Nome <seu.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
fastapi = "^0.68.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.0"
pytest-docker = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
